--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,61 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Hello</title>
+<link href="CSSPad.css" rel="stylesheet" type="text/css">
+<link href="Window.css" rel="stylesheet" type="text/css">
+<link href="AnimateCSS.css" rel="stylesheet" type="text/css">
+</head>
+
+<body class="guts">
+<header class="Transmission">
+  <marquee behavior="scroll">
   <p><strong id="docs-internal-guid-44657b37-8107-7145-b997-677a03f97c79" Scrollamount="10">ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ ＡＬＬ ＧＡＴＥＳ ＬＥＡＤ ＴＨＲＯＵＧＨ ＴＯ ＯＵＲ ＤＯＭＡＩＮ </strong></p>
+  </marquee>
+</header>
+<div class="MainContainer">
+<p>&nbsp;</p>
+<p><br>
+</p>
+<hr>
+<h3>
+  ＴＲＡＮＳＦＥＲＲＩＮＧ  ＰＲＯＴＯＣＯＬＳ <span class="loader__dot">.</span> <span class="loader__dot">.</span> <span class="loader__dot">.</span>
+</h3>
+<hr>
+<br>
+<p class="typewriter" id="TextGeneral">Ｗｈｅｒｅ ｗｏｕｌｄ ｙo͖̯̮͙͋̆̀͊͘ｕ ｌｉｋｅ ｔｏ ｇｏ？</p>
+<br>
+</div>
+<br>
+	
+<div class="Terma">
+	<p id="TextGeneral">ＴＥＲＭＡ ５１１－<span class="Offline">ＯＦＦＬＩＮＥ</span></p></span>
+</div>
+	
+<div class="Terma">
+	<p id="TextGeneral">ＴＥＲＭＡ ６１－<span class="Online"><a href="Terma61.html">ＯＮＬＩＮＥ</a></span></p></span>
+</div>
+	
+<div class="Terma">
+	<p id="TextGeneral">ＴＥＲＭＡ ＥＮＬＹ－<span class="Offline">ＯＦＦＬＩＮＥ</span></p></span>
+</div>
+
+<div class="Terma">
+	<p id="TextGeneral">ＴＥＲＭＡ ５３３ － <span class="Offline">ＯＦＦＬＩＮＥ</span></p></span>
+</div>
+
+<div class="Terma">
+	<p id="TextGeneral">ＴＥＲＭＡ（ｎｕｌｌ）－<span class="Corrupted"></span></p></span>
+</div>
+
+</div>
+
+
+
+<audio autoplay loop>
+	<source src="Index.mp3" type="audio/mpeg"
+	</audio>
+
+</body>
+</html>
