--- a/Terma61.html
+++ b/Terma61.html
@@ -17,25 +17,10 @@
 <!-- Actual Content for page, LegContent is just the div that holds all -->
 	
   <div class="Leggy">
-	  <div class="feet"><p class="legText">                    ,cldxkO00KK0o.                                               .;clx0KKXXXXXx.              
-                   .:ldxO00KKXK0o.                                               .;clxO0KXXXXXd.              
-                  .;lodkO0KKXXXKd.                                               .:clxO0KXNNNNO,              
-                  ,lodxk0KKKXXK0x'                                               .:cldO0XXNNNNXl              
-                 .:oodxkO00KKKK0d.                                               ':clx0KXNNNNNNx.             
-                .:oodxxxkO0KKKKOc.                                               'ccokKXXNNNNNN0:             
-               .coodxxxxkO0KKKKk'                                                ,clxOKXXNNNNNNNO,            
-             .,looodxxxxkkO0KKKd.                                               .;cok0XXNNNNNNNNNO;           
-            .:odddxxxxxxxkO00K0o.                                               .:ox0KXNNNNNNNNNNN0c          
-           .ldxxxxkkkkxxxxkO000o.                                               ,lxOKXNNNNNNNNNNNNN0;         
-          ,oxxxxxkkkkOkxddkO0KKx'                                              .cdOKXNNNXXNNNNNNNNNXk,        
-         .cxkxxkkOkkOOkxxxkOKXK0c                                             .,ldOXNNNNXXXXNNXXXXXXXk'       
-         .lxxdkOkkkOOOkxxxxO0KX0o.                                            .;ld0XNNNXKKKXXXKKK0O0Kk'       
-         .:ooxOxoxOkxkOkoldkOKKO:                                             .,cd0XXX0O0K00KKOkK0O0k;        
-          .'cxkllxOolxOd;:okO00c                                               'lxOK0olxO0kkKKxx0K0Oc         
-           .;oocokkc:dxc':dkOOk:                                              .,ldO0k;;x0OoxKKkx00o'.         
-             ..'ldl,:do;;lxO0OOl.                                             .;cdO0Olck0kldKKo:c:.           
-                ....':'.':ldxd:.                                               .':dkx:,lxl'':;.               
-                          ....                                                    ...   .                     </p>
+	  <div class="feet"><p class="legText">
+		<audio autoplay loop>
+		<source src="Stars.mp3" type="audio/mpeg">
+		</audio>
 	  </div>
   </div>
 	
