--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 <audio autoplay loop>
-	<source src="Index.mp3" type="audio/mpeg"
+	<source src="Index.mp3" type="audio/mpeg">
 	</audio>
 
 </body>
